update markdown to use tables

--- a/docs/introduction.docs.mdx
+++ b/docs/introduction.docs.mdx
@@ -169,35 +169,103 @@ export const Button = ({ children, variant = 'primary' }: ButtonProps) => {
 
 ### Setup & Development
 
-| Command | Description |
-|---------|-------------|
-| `npm run setup` | Install packages, setup Husky, and start dev server |
-| `npm run dev` | Start Next.js development server with Turbopack |
-| `npm run storybook` | Launch Storybook in development mode |
-| `npm run gen:component` | Generate a new component with scaffolding |
+<table>
+  <thead>
+    <tr>
+      <th>Command</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code>npm run setup</code></td>
+      <td>Install packages, setup Husky, and start dev server</td>
+    </tr>
+    <tr>
+      <td><code>npm run dev</code></td>
+      <td>Start Next.js development server with Turbopack</td>
+    </tr>
+    <tr>
+      <td><code>npm run storybook</code></td>
+      <td>Launch Storybook in development mode</td>
+    </tr>
+    <tr>
+      <td><code>npm run gen:component</code></td>
+      <td>Generate a new component with scaffolding</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Building & Production
 
-| Command | Description |
-|---------|-------------|
-| `npm run build` | Build production Next.js application |
-| `npm run start` | Start production server |
-| `npm run build-storybook` | Build static Storybook for deployment |
+<table>
+  <thead>
+    <tr>
+      <th>Command</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code>npm run build</code></td>
+      <td>Build production Next.js application</td>
+    </tr>
+    <tr>
+      <td><code>npm run start</code></td>
+      <td>Start production server</td>
+    </tr>
+    <tr>
+      <td><code>npm run build-storybook</code></td>
+      <td>Build static Storybook for deployment</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Testing & Quality
 
-| Command | Description |
-|---------|-------------|
-| `npm run test` | Run Vitest in interactive watch mode |
-| `npm run test:coverage` | Display test coverage statistics |
-| `npm run lint` | Lint TypeScript and SCSS files |
-| `npm run lint:fix` | Lint and auto-fix errors |
+<table>
+  <thead>
+    <tr>
+      <th>Command</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code>npm run test</code></td>
+      <td>Run Vitest in interactive watch mode</td>
+    </tr>
+    <tr>
+      <td><code>npm run test:coverage</code></td>
+      <td>Display test coverage statistics</td>
+    </tr>
+    <tr>
+      <td><code>npm run lint</code></td>
+      <td>Lint TypeScript and SCSS files</td>
+    </tr>
+    <tr>
+      <td><code>npm run lint:fix</code></td>
+      <td>Lint and auto-fix errors</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Git
 
-| Command | Description |
-|---------|-------------|
-| `npm run git:commit` | Interactive commit with prompts |
+<table>
+  <thead>
+    <tr>
+      <th>Command</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code>npm run git:commit</code></td>
+      <td>Interactive commit with prompts</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Testing
 
